fix: description and gap fixed on first screen

--- a/style.css
+++ b/style.css
@@ -212,18 +212,23 @@ input:focus {
     transition: .5s ease;
     border-radius: 10px;
 }
+
 .divImage:nth-child(1) {
     filter: drop-shadow(0 0 2px #83c9f8);
 }
+
 .divImage:nth-child(2) {
     filter: drop-shadow(0 0 2px #EED535);
 }
+
 .divImage:nth-child(3) {
     filter: drop-shadow(0 0 2px #b088f0);
 }
+
 .divImage:nth-child(4) {
     filter: drop-shadow(0 0 2px #FD7D24);
 }
+
 .divImage:nth-child(5) {
     filter: drop-shadow(0 0 2px #3DC7EF);
 }
@@ -406,6 +411,22 @@ input:focus {
 @media screen and (max-width: 567px) {
     html {
         font-size: 9.2px;
+    }
+
+    .p-div {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .p-tittle {
+        margin: 0px;
+        transform: translateX(0%);
+    }
+
+    .p-description {
+        transform: translateY(0%);
+        margin-top: 500px;
     }
 
     .content-main {
